Profile image upload is working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <div class="container">
         <div class="card shadow">
             <div class="colum1">
-                <img src="../Img/profile-1.png"></img>
+                <div onclick="chooseImg()" class="divImg">
+                    <img src=" " alt="">
+                </div>
+                <input id="imgInput" type="file" hidden>
+
                 <div class="userCode">
                     <p>1</p>
                     <p>5</p>
@@ -22,7 +26,6 @@
                     <p>0</p>
                     <p>7</p>
                     <p>3</p>
-
                 </div>
             </div>
             <div class="colum2">
