--- a/index.html
+++ b/index.html
@@ -20,25 +20,22 @@
                 <input id="imgInput" type="file" hidden>
 
                 <div class="userCode">
-                    <p>1</p>
-                    <p>5</p>
-                    <p>9</p>
-                    <p>0</p>
-                    <p>7</p>
-                    <p>3</p>
+                    <ul>
+                        <li>1</li>
+                    </ul>
                 </div>
             </div>
             <div class="colum2">
                 <div>
                     <div class="divInput inputName">
-                        <div id="infosInput">
+                        <div class="infosInput">
                             <p>name</p>
                             <input type="text" value="Vitor Guerra"></input>
                         </div>
                         <div id="verify"></div>
                     </div>
                     <div class="divInput inputLocation">
-                        <div id="infosInput">
+                        <div class="infosInput">
                             <p>location</p>
                             <input type="text" value="São Paulo, Brazil"></input>
                         </div>
@@ -47,29 +44,29 @@
                 </div>
                 <div>
                     <div class="divInput inputPronoun">
-                        <div id="infosInput">
+                        <div class="infosInput">
                             <p>pronoun</p>
                             <input type="text" value="He/Him"></input>
                         </div>
                         <div id="verify"></div>
                     </div>
                     <div class="divInput inputAge">
-                        <div id="infosInput">
+                        <div class="infosInput">
                             <p>age</p>
                             <input type="number" value="22"></input>
                         </div>
                         <div id="verify"></div>
                     </div>
                     <div class="divInput inputEmoji">
-                        <div id="infosInput">
+                        <div class="infosInput">
                             <p>emoji</p>
                             <input type="text" value="👽"></input>
                         </div>
                     </div>
                 </div>
                 <div class="divInput inputTags">
-                    <div id="infosInput">
-                        <p>tags</p>
+                    <div class="infosInput">
+                        <p>tags - write 3</p>
                         <ul>
                             <li>Technology</li>
                             <li>Music</li>
