Input Validation: recognizes non-standard names

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                     <div class="divInput inputName">
                         <div class="infosInput">
                             <p class="">name</p>
-                            <input type="text" value="Vitor Guerra"></input>
+                            <input type="text" placeholder="Abc"></input>
                         </div>
                         <div class="verify"></div>
                     </div>
                     <div class="divInput inputLocation">
                         <div class="infosInput">
                             <p class="">location</p>
-                            <input type="text" value="São Paulo, Brazil"></input>
+                            <input type="text" placeholder="City - Country"></input>
                         </div>
                         <div class="verify"></div>
                     </div>
