Input Validation: recognizes non-standard age

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="divInput inputAge">
                         <div class="infosInput">
                             <p class="">age</p>
-                            <input type="number" value="22"></input>
+                            <input type="number" placeholder="--"></input>
                         </div>
                         <div class="verify"></div>
                     </div>
