Input Validation: recognizes non-standard pronoun

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="divInput inputPronoun">
                         <div class="infosInput">
                             <p class="">pronoun</p>
-                            <input type="text" value="He/Him"></input>
+                            <input type="text" placeholder="--/--"></input>
                         </div>
                         <div class="verify"></div>
                     </div>
@@ -65,7 +65,7 @@
                     <div class="divInput inputEmoji">
                         <div class="infosInput">
                             <p class="">emoji</p>
-                            <input type="text" value="👽"></input>
+                            <input type="text" placeholder="👽"></input>
                         </div>
                     </div>
                 </div>
