Tags Input: remove button in each tag and count tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Card Generator</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/thinline.css">
 </head>
 
 <body>
@@ -65,7 +66,7 @@
                 </div>
                 <div class="divInput inputTags">
                     <div class="infosInput">
-                        <p class="">tags - write 3</p>
+                        <p class="">tags - 5 maximum</p>
                         <ul>
                             <input type="text" placeholder="write here..."></input>
                         </ul>
