User Location: search by current user location working

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                     <div class="divInput inputLocation">
                         <div class="infosInput">
                             <p class="">location</p>
-                            <input type="text" placeholder="City - Country"></input>
+                            <label>
+
+                            </label>
                         </div>
                         <div class="verify"></div>
                     </div>
