User Location: user location validation (Working)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="infosInput">
                             <p class="">location</p>
                             <label>
-                                
+
                             </label>
                         </div>
                         <div class="verify"></div>
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <input type="submit" value="*-*" class="saveBtn shadow"></input>
+        <input onclick="enviar()" type="submit" value="*-*" class="saveBtn shadow"></input>
     </form>
 
     <script src="./script.js"></script>
