--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <form class="container">
+    <div class="container">
         <div class="card shadow">
             <div class="colum1">
                 <div onclick="chooseImg()" class="divImg">
@@ -77,8 +77,8 @@
                 </div>
             </div>
         </div>
-        <input onclick="enviar()" type="submit" value="*-*" class="saveBtn shadow"></input>
-    </form>
+        <button onclick="enviar()" value="*-*" class="saveBtn shadow"></button>
+    </div>
 
     <script src="./script.js"></script>
 </body>
